src/validation/tests/snapshots/rusty__validation__tests__builtin_validation_tests__comparison_builtins_called_with_invalid_param_count.snap
---
source: src/validation/tests/builtin_validation_tests.rs
expression: "&diagnostics"
---
error[E032]: Invalid parameter count. Received 0 parameters while 2 parameters were expected.
  ┌─ <internal>:7:13
  │
7 │             EQ();
  │             ^^ Invalid parameter count. Received 0 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 1 parameters while 2 parameters were expected.
  ┌─ <internal>:8:13
  │
8 │             GT(x1);
  │             ^^ Invalid parameter count. Received 1 parameters while 2 parameters were expected.

error[E032]: Invalid parameter count. Received 4 parameters while 2 parameters were expected.
   ┌─ <internal>:10:13
   │
10 │             NE(x2, x2, x1, x2); // NE is not extensible
   │             ^^ Invalid parameter count. Received 4 parameters while 2 parameters were expected.


